style.css
:root{
--color-text-primary-veryDarkDesaturatedBlue :hsl(238, 29%, 16%);
--color-text-primary-softRed :hsl(14, 88%, 65%);

--color-text-neutral-veryDarkGrayishBlue :hsl(237, 12%, 33%);
--color-text-neutral-darkGrayishBlue :hsl(240, 6%, 50%);

--color-gradient-softViolet:hsl(273, 75%, 66%);
--color-gradient-softBlue:hsl(240, 73%, 65%);

--font-family: 'Kumbh Sans', sans-serif;
--font-weight-400:400;
--font-weight-700:700;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img{
width: 100%;
}

hr{
    margin-top: 1em;
    border-color: hsla(240, 5%, 91%, .5);
    border-width: 1px;
}

body{
    font-size: 12px;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(var(--color-gradient-softViolet),var(--color-gradient-softBlue));
    font-family: var(--font-family);
}

.card{
    display: flex;
    gap: 2em;
    justify-content: center;
    padding: 4em;
    background-color: white;
    border-radius: 15px;
    background-image: url(images/bg-pattern-desktop.svg);
    width: 1000px;
}

.card__picture{
    display: flex;
    border: 2px solid red;
    overflow: hidden;
}

.card__picture img{
    object-fit: contain;
    width: 500px;
    height: auto;
    position: relative;
    right: 100px;
}

.cube{
    background-color: aqua;
    right: 0;
    object-fit: cover;
    position: relative;
    width: 50px;
    height: 100px;
}



.card__info{
    flex: 50%;
    font-size: 1rem;
    padding: 2em;
}

.card__info h1{margin-bottom: 1em;
}

.card__info img{
    width: 1em;
}

.card__info__content{}

.card__info__content-question{
    display: flex;
    margin: 1em 0;
    gap: 1em;
    justify-content: space-between;
}
.card__info__content-answer{
       display: none;
}

.arrow{
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards; 
}

@keyframes rotateOpen {
    from{transform: rotate(0deg)}
    to{transform: rotate(180deg)}  
}

@keyframes rotateClose {
    from{transform: rotate(180deg)}
    to{transform: rotate(0deg)}  
}

